--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,25 +1,30 @@
 version: "3.8"
 
 services:
-  test:
+  back:
     build: .
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
-
     container_name: "collaborative-code-editor"
     ports:
       - "8080:8080"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/compose-postgres
+      - SPRING_DATASOURCE_USERNAME=compose-postgres
+      - SPRING_DATASOURCE_PASSWORD=compose-postgres
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
 
   postgres:
     image: postgres
+
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_HOST_AUTH_METHOD=trust
+      - POSTGRES_USER=compose-postgres
+      - POSTGRES_PASSWORD=compose-postgres
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
