--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: postgres
+    username: compose-postgres
+    password: compose-postgres
+redis:
+  port: 6379
+  host: localhost
+server:
+  port: 8081
