--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,14 +1,15 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: compose-postgres
-    password: compose-postgres
+    url: jdbc:postgresql://dpg-clrv15sm7d1c73f5m130-a.frankfurt-postgres.render.com:5432/editor_kgno
+    username: editor_kgno_user
+    password: KrrwqL0WBv4b6bYiwiuSQIPai0sFQjja
   data:
     redis:
       port: 6379
       database: 0
-      host: localhost
+      host: frankfurt-redis.render.com
       timeout: 600000
-      password: mypass
+      user: red-clrul3km7d1c73f5ie6g
+      password: UjRl392NIKuiOf8i7TdH4oyNOwUmFKR4
 server:
   port: 8081
