--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,20 @@
-FROM openjdk:17
-EXPOSE 8080
-COPY build/libs/backend-*.jar collaborative-code-editor.jar
-ENTRYPOINT ["java", "-jar", "collaborative-code-editor.jar"]
+FROM openjdk:20-jdk as build
+
+WORKDIR /app
+
+COPY gradlew .
+COPY gradle gradle
+COPY build.gradle .
+COPY settings.gradle .
+
+COPY src src
+
+RUN chmod +x ./gradlew
+
+RUN ./gradlew build
+
+FROM openjdk:20-jre
+
+COPY --from=build /app/build/libs/*.jar /app/app.jar
+
+CMD ["java", "-jar", "/app/app.jar"]
