--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -5,11 +5,6 @@ spring:
     password: KrrwqL0WBv4b6bYiwiuSQIPai0sFQjja
   data:
     redis:
-      port: 6379
-      database: 0
-      host: frankfurt-redis.render.com
-      timeout: 600000
-      user: red-clrul3km7d1c73f5ie6g
-      password: UjRl392NIKuiOf8i7TdH4oyNOwUmFKR4
+      url: rediss://red-clrul3km7d1c73f5ie6g:UjRl392NIKuiOf8i7TdH4oyNOwUmFKR4@frankfurt-redis.render.com:6379
 server:
   port: 8081
